  Insert your changelog randomly, it will reduce merge conflicts
  (Ie. not necessarily at the end)


What's New in Pylint 2.13.5?
============================
Release date: TBA

* Fix false positive regression in 2.13.0 for ``used-before-assignment`` for
  homonyms between variable assignments in try/except blocks and variables in
  subscripts in comprehensions.

  Closes #6069
  Closes #6136

* ``lru-cache-decorating-method`` will only be emitted when ``maxsize`` is None.

  Closes #6180

* Fix false positive for ``unused-import`` when disabling both ``used-before-assignment`` and ``undefined-variable``.

  Closes #6089

* Narrow the scope of the ``unnecessary-ellipsis`` checker to:
  * functions & classes which contain both a docstring and an ellipsis.
  * A body which contains an ellipsis ``nodes.Expr`` node & at least one other statement.

* Fix crash for ``redefined-slots-in-subclass`` when the type of the slot is not a const or a string.

  Closes #6100

* Only raise ``not-callable`` when all the inferred values of a property are not callable.

  Closes #5931


What's New in Pylint 2.13.4?
============================
Release date: 2022-03-31

* Fix false positive regression in 2.13.0 for ``used-before-assignment`` for
  homonyms between variable assignments in try/except blocks and variables in
  a comprehension's filter.

  Closes #6035

* Include ``testing_pylintrc`` in source and wheel distributions.

  Closes #6028

* Fix crash in ``super-init-not-called`` checker when using ``ctypes.Union``.

  Closes #6027


* Fix crash for ``unneccessary-ellipsis`` checker when an ellipsis is used inside of a container or a lambda expression.

  Closes #6036
  Closes #6037
  Closes #6048


What's New in Pylint 2.13.3?
============================
Release date: 2022-03-29

* Fix false positive for ``unnecessary-ellipsis`` when using an ellipsis as a default argument.

  Closes #5973

* Fix crash involving unbalanced tuple unpacking.

  Closes #5998
