@@ -428,14 +428,15 @@ class StdlibChecker(DeprecatedMixin, BaseChecker):
             "Calls to breakpoint(), sys.breakpointhook() and pdb.set_trace() should be removed "
             "from code that is not actively being debugged.",
         ),
-        "W1516": (
+        "W1517": (
             "'lru_cache(maxsize=None)' will keep all method args alive indefinitely, including 'self'",
-            "lru-cache-decorating-method",
+            "cache-max-size-none",
             "By decorating a method with lru_cache the 'self' argument will be linked to "
             "the lru_cache function and therefore never garbage collected. Unless your instance "
             "will never need to be garbage collected (singleton) it is recommended to refactor "
             "code to avoid this pattern or add a maxsize to the cache."
             "The default value for maxsize is 128.",
+            {"old_names": [("W1516", "lru-cache-decorating-method")]},
         ),
     }
 
@@ -562,7 +563,7 @@ class StdlibChecker(DeprecatedMixin, BaseChecker):
         for value in node.values:
             self._check_datetime(value)
 
-    @utils.check_messages("lru-cache-decorating-method")
+    @utils.check_messages("cache-max-size-none")
     def visit_functiondef(self, node: nodes.FunctionDef) -> None:
         if node.decorators and isinstance(node.parent, nodes.ClassDef):
             self._check_lru_cache_decorators(node.decorators)
@@ -595,7 +596,7 @@ class StdlibChecker(DeprecatedMixin, BaseChecker):
                 pass
         for lru_cache_node in lru_cache_nodes:
             self.add_message(
-                "lru-cache-decorating-method",
+                "cache-max-size-none",
                 node=lru_cache_node,
                 confidence=interfaces.INFERENCE,
             )
