@@ -1,4 +1,4 @@
-"""Tests for lru-cache-decorating-method"""
+"""Tests for cache-max-size-none"""
 # pylint: disable=no-self-use, missing-function-docstring, reimported, too-few-public-methods
 # pylint: disable=missing-class-docstring, function-redefined
 
@@ -22,25 +22,25 @@ class MyClassWithMethods:
     def my_func(self, param):
         return param + 1
 
-    @lru_cache(None)  # [lru-cache-decorating-method]
+    @lru_cache(None)  # [cache-max-size-none]
     def my_func(self, param):
         return param + 1
 
-    @functools.lru_cache(None)  # [lru-cache-decorating-method]
+    @functools.lru_cache(None)  # [cache-max-size-none]
     def my_func(self, param):
         return param + 1
 
-    @aliased_functools.lru_cache(None)  # [lru-cache-decorating-method]
+    @aliased_functools.lru_cache(None)  # [cache-max-size-none]
     def my_func(self, param):
         return param + 1
 
-    @aliased_cache(None)  # [lru-cache-decorating-method]
+    @aliased_cache(None)  # [cache-max-size-none]
     def my_func(self, param):
         return param + 1
 
     # Check double decorating to check robustness of checker itself
-    @aliased_cache(None)  # [lru-cache-decorating-method]
-    @aliased_cache(None)  # [lru-cache-decorating-method]
+    @aliased_cache(None)  # [cache-max-size-none]
+    @aliased_cache(None)  # [cache-max-size-none]
     def my_func(self, param):
         return param + 1
 
@@ -70,6 +70,6 @@ class MyClassWithMethodsAndMaxSize:
     def my_func(self, param):
         return param + 1
 
-    @lru_cache(typed=True, maxsize=None)  # [lru-cache-decorating-method]
+    @lru_cache(typed=True, maxsize=None)  # [cache-max-size-none]
     def my_func(self, param):
         return param + 1
