@@ -80,7 +80,8 @@ Release date: TBA
   Closes #6069
   Closes #6136
 
-* ``lru-cache-decorating-method`` will only be emitted when ``maxsize`` is None.
+* ``lru-cache-decorating-method`` has been renamed to ``cache-max-size-none`` and
+  will only be emitted when ``maxsize`` is ``None``.
 
   Closes #6180
 
